# cpp-training

./: .gitignore
LR3/Task_1/: Task_1  Task_1.cpp
LR3/Task_2/: Task_2  Task_2.cpp
LR3/Task_3/: Task_3  Task_3.cpp
LR3/Task_4/: Task_4  Task_4.cpp
LR3/Task_5/: Task_5
LR3/Task_6/: Task_6  Task_6.cpp
LR3/Task_7/: Task_7  Task_7.cpp
LR3/Task_8/: Task_8  Task_8.cpp
LR4/Task_1/: Task_1.cpp
LR4/Task_2/: Task_2
LR4/Task_3/: Task_3  Task_3.cpp
LR4/Task_4/: Task_4.cpp
LR4/Task_5/: Task_5  Task_5.cpp
LR4/Task_6/: Task_6.cpp
LR5/Task_1/: main
LR5/Task_1/include/: matrix.h
LR5/Task_1/src/: fill.cpp  print.cpp  solve.cpp  sums.cpp  transpose.cpp  utils.cpp
LR5/Task_2/app/: main.cpp
LR5/Task_2/include/: matrix.h
LR5/Task_2/src/: dll.cpp
LR5/Task_3/: Task_3  Task_3.cpp
LR5/Task_4/: Task_4  Task_4.cpp
LR5/Task_5/: Task_5  Task_5.cpp
LR6/Task_1/: CMakeLists.txt
LR6/Task_1/app/: main.cpp
LR6/Task_1/include/: functions.h
LR6/Task_2/: CMakeLists.txt  main.cpp
LR6/Task_3/: CMakeLists.txt  main.cpp
LR7/Task_1/: Task_1  Task_1.cpp
LR7/Task_2/: Task_2  Task_2.cpp
LR7/Task_3/: Task_3  Task_3.cpp
LR7/Task_4/: Task_4  Task_4.cpp
LR7/Task_5/: Task_5  Task_5.cpp
LR8/Task_1/: Task_1
LR8/Task_2/: Task_2
LabWork4_PartC/Task_4/: Task_4  Task_4.cpp
LabWork4_PartC/Task_5/: Task_5  Task_5.cpp
LabWork4_PartC/Task_6/: Task_6  Task_6.cpp
exercise_1/: README.md  cmath.h
exercise_1/Task_1/: a.out
exercise_1/Task_5/: Task_5.cpp
exercise_1/Task_8/: Task_8  Task_8.cpp
exercise_2/Task_1/: Task_1
exercise_2/Task_2/: Task_2.cpp
(+27 files in other folders)
